# oci-enterprise-ai-deployer

./: .dockerignore  .gitignore  AGENTS.md  FEATURE_HISTORY.md  README.md  WEB_UI_LINUX_DEPLOYMENT.md  compose.env.example  compose.yaml  oci_ai_deploy.py  pyproject.toml  requirements.txt  start_demo.sh  stop_demo.sh
apps/deployer-web/: .dockerignore  next.config.mjs  package-lock.json  package.json
apps/deployer-web/app/: globals.css  layout.tsx  page.tsx
docker/: api.Dockerfile  web.Dockerfile
enterprise_ai_deployment/: README.md  __init__.py  api.py  cli_commands.py  compartments.py  config.py  deployment_config.py  deployment_renderer.py  deployment_runner.py  deployment_schema.py  deployment_script.py  deployment_validation.py  design_deploy_oci_enterprise_ai.md  implementation_spec_codex.md  menu.py  oci_ai_deploy.py  ocir.py  preflight.py  rendering.py  workflows.py
enterprise_ai_deployment/examples/: agent_dev.env.sample  agent_dev.yaml  enterprise_solution_dev.yaml
examples/hello_world_container/: Dockerfile  app.py  requirements.txt
tests/: conftest.py  test_enterprise_ai_deployment_api.py  test_enterprise_ai_deployment_deployer.py  test_enterprise_ai_deployment_menu.py  test_enterprise_ai_deployment_preflight.py
