# Author: L. Saetta
# Version: 0.9.0
# Last modified: 2026-05-05
# License: MIT

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oci-enterprise-ai-deployer"
version = "0.9.0"
description = "CLI utilities for OCI Enterprise AI Hosted Application deployments."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "L. Saetta" }]
dependencies = [
  "fastapi>=0.115.0",
  "oci-cli==3.81.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "PyYAML>=6.0,<=6.0.2",
  "rich>=13.0.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "httpx>=0.27.0",
  "pylint>=3.0.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
oci-ai-deploy = "enterprise_ai_deployment.deployment_runner:main"
oci-ai-deploy-menu = "enterprise_ai_deployment.menu:main"
oci-ai-deploy-api = "enterprise_ai_deployment.api:main"

[tool.setuptools.packages.find]
include = ["enterprise_ai_deployment*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.pylint.main]
py-version = "3.11"
ignore = [".git", "__pycache__"]

[tool.pylint.messages_control]
disable = [
  "duplicate-code",
]
